<resources>
    <string name="app_name">Project_2a</string>
    <string name="mockup_1">Mock Up 1</string>
    <string name="mockup_2">Mock Up 2</string>
    <string name="indonesia">JAKARTA, INDONESIA</string>
    <string name="degree">24\'C</string>
    <string name="date">MONDAY, DECEMBER 26</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="login">Login</string>
    <string name="sign_up">or Sign up with</string>
</resources>

